<resources>
    <string name="app_name">Topspin</string>
    <string name="guest">Guest</string>
    <string name="newuser">New User</string>
    <string name="login">Log in</string>
    <string name="welcome">Welcome to Topspin, please sign in.</string>
    <string name="old_dominion_university">Old Dominion University</string>
    <string name="norfolk_state">Norfolk State</string>
    <string name="view_match">View Match</string>
    <string name="vs">Versus</string>
    <string name="input_the_following_prompts">Input the following prompts</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="create">Create Event</string>
    <string name="title_activity_login">Sign in</string>
    <string name="TennisTypeMens">Men\'s Tennis  //</string>
    <string name="ViewScheduleHeader">ODU Men\'s Tennis 2019 Schedule</string>
    <string name="TournamentAdd">Add Entry</string>
    <string name="tAdd_date">Date:</string>
    <string name="tAdd_time">Time:</string>
    <string name="tAdd_location">Location:</string>
    <string name="tAdd_homeaway">Home/Away?</string>
    <string name="tAdd_oppteam">Opposing Team:</string>
    <string name="tAdd_Header">New Tournament Details</string>
    <string name="ModiffyTHeader">Modify Tournament</string>
    <string name="hometown">Hometown</string>
    <string name="classYear">Class Standing</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="modify_player">Modify Player</string>

    <!-- Strings related to admin main page -->
    <string name="view">View Event</string>
    <string name="modify_event">Modify Event</string>
    <string name="start">Start Scoring!</string>
    <string name="myAccount">My Account</string>
    <string name="EditProfile">Edit Profile</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="guest_sign_in">Guest</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcomepage">welcomePage</string>
    <string name="welcomeFan">Welcome!</string>
    <string name="fanname">FanName</string>
    <string name="simpson_brett">Simpson, Brett</string>
    <string name="user_role">userRole</string>
    <string name="signed_in_as_fan">Signed in as: Fan</string>
    <string name="signed_in_as_coach">Signed in as: Coach</string>
    <string name="favorite_players">favorite_players</string>
    <string name="favorite_players1">favorite players</string>
    <string name="volunteer">Volunteer</string>
    <string name="signed_in_as_guest">Signed in as: Guest</string>

    <string name="sign_up">sign up</string>
    <string name="not_registered">\ Don\'t have an account yet?</string>
    <string name="guest_login">guestLogin</string>
    <string name="last_name">last name</string>
    <string name="first_name">first name</string>
    <string name="user_profile_photo">user_profile_photo</string>

    <!-- Strings related to volunteer -->
    <string name="volunteer_access_code">Volunteer Access Code</string>
    <string name="signed_in_as_volunteer">Signed in as: Volunteer</string>
    <string name="view_event">view event</string>
    <string name="start_scoring">start scoring!</string>


    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">Login - Get</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>


    //Scoring Activity Strings (Crusenberry)
    //Score Strings
    <string name="ScoreZero">0</string>
    <string name="ScoreFifteen">15</string>
    <string name="ScoreThirty">30</string>
    <string name="ScoreForty">40</string>
    <string name="ScoreAdvantage">Adv</string>
    <string name="ScoreWin">Win</string>

    //Tennis Technical Strings
    <string name="FaultString">Fault</string>
    <string name="FaultStringCaps">FAULT</string>
    <string name="AceString">Ace</string>
    <string name="AceStringCaps">ACE</string>

    //Button Strings
    <string name="SubmitButtonString">Submit</string>
    <string name="CancelButtonString">Cancel</string>
    <string name="PlusButtonString">+</string>
    <string name="MinusButtonString">-</string>

    //Misc Constant Strings
    <string name="CurrentScoreString">Current Score</string>
    <string name="CurrentMatchString">Current Match</string>
    <string name="EmptyString"></string>

    //Placeholder Name Strings
    <string name="NameLeftString">John Smith</string>
    <string name="UniLeftString">Old Dominion University</string>
    <string name="UniLeftStringShort">ODU</string>
    <string name="NameRightString">Todd Packer</string>
    <string name="UniRightString">Not Available University</string>
    <string name="UniRightStringShort">NAU</string>
    <string name="ODU_men_roster">Old Dominion Men\'s Roster</string>
    <string name="add_new_player">Add New Player</string>


</resources>
