<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/modify_player"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Update Player" />

    <EditText
        android:id="@+id/addPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        tools:text="@string/first_name" />

    <EditText
        android:id="@+id/addClassYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/classYear"
        android:inputType="date|datetime|text"
        app:layout_constraintStart_toStartOf="@+id/addLastName"
        app:layout_constraintTop_toBottomOf="@+id/addLastName"
        tools:text="@string/classYear" />

    <EditText
        android:id="@+id/addLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textShortMessage"
        app:layout_constraintStart_toStartOf="@+id/addPlayerName"
        app:layout_constraintTop_toBottomOf="@+id/addPlayerName"
        tools:text="@string/last_name" />

    <EditText
        android:id="@+id/addHometown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/hometown"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/addClassYear"
        app:layout_constraintTop_toBottomOf="@+id/addClassYear"
        tools:text="@string/hometown" />

    <EditText
        android:id="@+id/addHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="textUri|number|phone"
        app:layout_constraintStart_toStartOf="@+id/addHometown"
        app:layout_constraintTop_toBottomOf="@+id/addHometown"
        tools:text="@string/height" />

    <EditText
        android:id="@+id/addWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/addHeight"
        app:layout_constraintTop_toBottomOf="@+id/addHeight"
        tools:text="@string/weight" />

    <Button
        android:id="@+id/updatePlayer"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="28dp"
        android:text="Update Player"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>